add link to tracker

--- a/docs/1.guide/8.websocket.md
+++ b/docs/1.guide/8.websocket.md
@@ -14,6 +14,7 @@ Nitro natively supports runtime agnostic [WebSocket](https://developer.mozilla.o
 
 > [!IMPORTANT]
 > WebSockets support is currently experimental and available in [nightly channel](/guide/nightly).
+> See [unjs/nitro#2171](https://github.com/unjs/nitro/issues/2171) for platform support status.
 
 ## Usage
 
