docs(index): fix utils link

--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -80,7 +80,7 @@ The `api/` directory is similar to `route/` with only difference that routes ins
 
 This directory contains your application utils with auto import support.
 
-:read-more{to="/guide/plugins"}
+:read-more{to="/guide/utils"}
 
 ### `plugins/`
 
