docs: typo 8.websocket.md
missing `(`

--- a/docs/1.guide/8.websocket.md
+++ b/docs/1.guide/8.websocket.md
@@ -40,7 +40,7 @@ export default defineNuxtConfig({
 ```
 ::
 
-Create a websocket handler in `routes/_ws.ts` or `server/routes/_ws.ts` for Nuxt).
+Create a websocket handler in `routes/_ws.ts` (or `server/routes/_ws.ts` for Nuxt).
 
 <!-- automd:file code src="../../examples/websocket/routes/_ws.ts" -->
 
