--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -12,13 +12,13 @@ Nitro natively supports runtime agnostic [WebSocket](https://developer.mozilla.o
 
 :read-more{title="CrossWS" to="https://crossws.unjs.io/"}
 
+## Opt-in to the experimental feature
+
 > [!IMPORTANT]
 > WebSockets support is currently experimental and available in [nightly channel](/guide/nightly).
 > See [unjs/nitro#2171](https://github.com/unjs/nitro/issues/2171) for platform support status.
 
-## Usage
-
-Enable experimental flag first:
+In order to enable database layer you need to enable experimental feature flag.
 
 ::code-group
 ```ts [nitro.config.ts]
@@ -40,7 +40,12 @@ export default defineNuxtConfig({
 ```
 ::
 
+## Usage
+
 Create a websocket handler in `routes/_ws.ts` (or `server/routes/_ws.ts` for Nuxt).
+
+> [!TIP]
+> You can use any route like `routes/chatroom.ts` to register upgrade handler on `/chatroom`.
 
 <!-- automd:file code src="../../examples/websocket/routes/_ws.ts" -->
 
