--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -1,39 +1,40 @@
 ---
-icon: ri:database-2-line
+icon: carbon:datastore
 ---
 
-# Storage
+# KV Storage
 
 > Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source.
 
 Nitro has built-in integration with [unjs/unstorage](https://unstorage.unjs.io) to provide a runtime agnostic persistent layer.
 
+## Usage
 
 To use the storage layer, you can use the `useStorage()` and call `getItem(key)` to retrieve an item and `setItem(key, value)` to set an item.
 
 ```ts
+// Default storage is in memory
 await useStorage().setItem('test:foo', { hello: 'world' })
 await useStorage().getItem('test:foo')
 
 // You can also specify the base in useStorage(base)
 await useStorage('test').setItem('foo', { hello: 'world' })
-// `useStorage` and chained functions support a generic type to infer the return type
+
+// You can use data storage to write data to default .data/kv directory
+const dataStorage = useStorage('data').setItem('test', 'works')
+await useStorage().getItem('data:test') // Value persists
+
+// You can use generics to define types
 await useStorage<{ hello: string }>('test').getItem('foo')
 await useStorage('test').getItem<{ hello: string }>('foo')
 ```
 
 :read-more{to="https://unstorage.unjs.io"}
 
-## Mount points
 
-Storage root is in memory by default. Nitro also mounts `data:` using the platforms storage.
-
-```js
-const dataStorage = useStorage('data')
-```
+## Configuration
 
 You can mount one or multiple custom storage drivers using the `storage` config.
-
 The key is the mount point name, and the value is the driver name and configuration.
 
 ::code-group
@@ -142,7 +143,8 @@ const cacheStorage = useStorage('cache')
 const buildStorage = useStorage('build')
 ```
 
-You also can use the `devStorage` key to overwrite the storage configuration during development. This is very useful when you use a database in production and want to use the filesystem in development.
+> [!TIP]
+> You also can use the `devStorage` key to overwrite the storage configuration during development. This is very useful when you use a database in production and want to use the filesystem in development.
 
 In order to use the `devStorage` key, you need to use the `nitro dev` command and the key in the `storage` option must be the same as the production one.
 
