--- a/docs/1.guide/7.fetch.md
+++ b/docs/1.guide/7.fetch.md
@@ -4,8 +4,7 @@ icon: ri:global-line
 
 # Fetch
 
-Nitro provides a built-in fetch API that can be used to get data from server endpoints or from other sources. It's build on top of the [unjs/ofetch](https://ofetch.unjs.io).
-
+> Nitro provides a built-in fetch API that can be used to get data from server endpoints or from other sources. It's build on top of the [unjs/ofetch](https://ofetch.unjs.io).
 
 ## Usage
 
