--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -44,6 +44,10 @@ export default defineNuxtConfig({
 ```
 ::
 
+Also install `better-sqlite3` dependency:
+
+:pm-install{name="-D better-sqlite3"}
+
 ## Usage
 
 <!-- automd:file code src="../../examples/database/routes/index.ts" -->
