refactor: various  improvements around task

--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -67,9 +67,12 @@ export default defineEventHandler(async () => {
   // Query for users
   const { rows } = await db.sql`SELECT * FROM users WHERE id = ${userId}`;
 
-  return {
-    rows,
-  };
+  return `
+    <h1>Database Example</h1>
+    <a href="/database">Back</a>
+    Rows:
+    <pre>${JSON.stringify(rows, null, 2)}</pre>
+    `;
 });
 
 ```
