--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -67,12 +67,9 @@ export default defineEventHandler(async () => {
   // Query for users
   const { rows } = await db.sql`SELECT * FROM users WHERE id = ${userId}`;
 
-  return `
-    <h1>Database Example</h1>
-    <a href="/database">Back</a>
-    Rows:
-    <pre>${JSON.stringify(rows, null, 2)}</pre>
-    `;
+  return {
+    rows,
+  };
 });
 
 ```
