--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -18,7 +18,7 @@ In order to tasks API you need to enable experimental feature flag.
 ```ts [nitro.config.ts]
 export default defineNitroConfig({
   experimental: {
-    websocket: true
+    tasks: true
   }
 })
 ```
@@ -27,22 +27,23 @@ export default defineNitroConfig({
 export default defineNuxtConfig({
   nitro: {
     experimental: {
-      websocket: true
+      tasks: true
     }
   }
 })
 ```
 ::
 
-## Usage
 
-Task files can be defined in `tasks/[name].ts` (`server/tasks/[name].ts` in Nuxt) or manually in the `tasks: {}` configuration in `nitro.config` (`nitro: { tasks: {} }` in `nuxt.config`). If nested, the name will be joined with `:` (`tasks/db/migrate` => task name: `db:migrate`)
+## Define Tasks
 
+Tasks can be defined in `tasks/[name].ts` files.
 
-Example: Define a nitro task
+Nested directories are supported. The task name will be joined with `:`. (Example: `tasks/db/migrate.ts`task name will be `db:migrate`)
 
-```ts
-// tasks/db/migrate.ts
+**Example:**
+
+```ts [tasks/db/migrate.ts]
 export default defineNitroTask({
   description: "Run database migrations",
   run(payload, context) {
@@ -52,41 +53,72 @@ export default defineNitroTask({
 });
 ```
 
-To execute tasks, we can call them in runtime (in an event handler for example) using `runNitroTask`
+> [!NOTE]
+> Use `server/tasks/db/migrate.ts` for Nuxt.
 
-Example: Execute a nitro task in an event handler:
+## Run tasks
+
+To execute tasks, you can use `runNitroTask(name, <payload>)` utility.
+
+**Example:**
 
 ```ts
-// api/migrate.ts`
+// api/migrate.ts
 export default eventHandler(async (event) => {
-  // !!! TODO: Authenticate user !!!
-  // !!! TODO: Validate payload  !!!
+  // IMPORTANT: Authenticate user and validate payload!
   const payload = { ...getQuery(event) };
   const { result } = await runNitroTask("db:migrate", payload);
   return { result };
 });
 ```
 
-It is also possible to run tasks while the development server **is running**:
+## Run tasks with dev server
 
-Using API:
+Nitro's built-in dev server exposes tasks to be easily executed without programmatic .usage.
 
-- `/_nitro/tasks` returns a list of available task names and their meta
-- `/_nitro/tasks/:name` executes a task. You can provide a payload using both query parameters and body JSON payload.
+### Using API routes
 
-Using CLI:
+#### `/_nitro/tasks`
 
-- Run `npm run nitro tasks run db:migrate --payload "{}"`
-- Run `npm run nitro tasks list` to show the list of available tasks
+This endpoint returns a list of available task names and their meta.
 
+**Example:**
 
-```[tasklist]
-### Tasks
-- [x] Initial Implementation (#1929)
-- [ ] Write documentation section (PR welcome!)
-- [ ] Ability to run tasks using CLI against production build
-- [ ] Stablize API / return values
-- [ ] Integrate with Cron Tasks / Background Jobs
-- [ ] Task hooks (on dev start, production start and production build)
-- [ ] https://github.com/unjs/nitro/issues/2021
+```json
+{
+  "tasks": {
+    "db:migrate": {
+      "description": "Run database migrations"
+    }
+  }
+}
+```
+
+#### `/_nitro/tasks/:name`
+
+This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload.
+
+**Example:** (`/_nitro/tasks/db:migrate`)
+
+```json
+{
+  "result": "Database migrations completed!"
+}
+```
+
+### Usin CLI
+
+> [!IMPORTANT]
+> It is only possible to run these commands while the **dev server is running**. You should run them in a second terminal.
+
+#### List tasks
+
+```sh
+nitro tasks list
+```
+
+#### Run a task
+
+```sh
+nitro tasks run db:migrate --payload "{}"
 ```
