refactor(tasks): improve api

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -45,9 +45,12 @@ Nested directories are supported. The task name will be joined with `:`. (Exampl
 
 ```ts [tasks/db/migrate.ts]
 export default defineNitroTask({
-  description: "Run database migrations",
-  run(payload, context) {
-    console.log("Running DB migration task...", { payload });
+  meta: {
+    name: "db:migrate",
+    description: "Run database migrations",
+  },
+  run({ payload, context }) {
+    console.log("Running DB migration task...");
     return "Success";
   },
 });
@@ -74,7 +77,7 @@ export default eventHandler(async (event) => {
 
 ## Run tasks with dev server
 
-Nitro's built-in dev server exposes tasks to be easily executed without programmatic .usage.
+Nitro's built-in dev server exposes tasks to be easily executed without programmatic usage.
 
 ### Using API routes
 
@@ -82,9 +85,8 @@ Nitro's built-in dev server exposes tasks to be easily executed without programm
 
 This endpoint returns a list of available task names and their meta.
 
-**Example:**
-
 ```json
+// [GET] /_nitro/tasks
 {
   "tasks": {
     "db:migrate": {
@@ -98,9 +100,8 @@ This endpoint returns a list of available task names and their meta.
 
 This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload.
 
-**Example:** (`/_nitro/tasks/db:migrate`)
-
 ```json
+// [GET] /_nitro/tasks/db:migrate
 {
   "result": "Database migrations completed!"
 }
