--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -44,7 +44,7 @@ Nested directories are supported. The task name will be joined with `:`. (Exampl
 **Example:**
 
 ```ts [tasks/db/migrate.ts]
-export default defineNitroTask({
+export default defineTask({
   meta: {
     name: "db:migrate",
     description: "Run database migrations",
@@ -61,7 +61,7 @@ export default defineNitroTask({
 
 ## Run tasks
 
-To execute tasks, you can use `runNitroTask(name, <payload>)` utility.
+To execute tasks, you can use `runTask(name, <payload>)` utility.
 
 **Example:**
 
@@ -70,7 +70,7 @@ To execute tasks, you can use `runNitroTask(name, <payload>)` utility.
 export default eventHandler(async (event) => {
   // IMPORTANT: Authenticate user and validate payload!
   const payload = { ...getQuery(event) };
-  const { result } = await runNitroTask("db:migrate", payload);
+  const { result } = await runTask("db:migrate", payload);
   return { result };
 });
 ```
