--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -61,7 +61,7 @@ export default defineTask({
 
 ## Run tasks
 
-To execute tasks, you can use `runTask(name, <payload>)` utility.
+To execute tasks, you can use `runTask(name, { payload? })` utility.
 
 **Example:**
 
@@ -70,7 +70,7 @@ To execute tasks, you can use `runTask(name, <payload>)` utility.
 export default eventHandler(async (event) => {
   // IMPORTANT: Authenticate user and validate payload!
   const payload = { ...getQuery(event) };
-  const { result } = await runTask("db:migrate", payload);
+  const { result } = await runTask("db:migrate", { payload });
   return { result };
 });
 ```
