--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -115,11 +115,11 @@ This endpoint executes a task. You can provide a payload using both query parame
 #### List tasks
 
 ```sh
-nitro tasks list
+nitro task list
 ```
 
 #### Run a task
 
 ```sh
-nitro tasks run db:migrate --payload "{}"
+nitro task run db:migrate --payload "{}"
 ```
