refactor(tasks): stablize api (#2178)

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -35,7 +35,7 @@ export default defineNuxtConfig({
 ::
 
 
-## Define Tasks
+## Define tasks
 
 Tasks can be defined in `tasks/[name].ts` files.
 
@@ -44,10 +44,13 @@ Nested directories are supported. The task name will be joined with `:`. (Exampl
 **Example:**
 
 ```ts [tasks/db/migrate.ts]
-export default defineNitroTask({
-  description: "Run database migrations",
-  run(payload, context) {
-    console.log("Running DB migration task...", { payload });
+export default defineTask({
+  meta: {
+    name: "db:migrate",
+    description: "Run database migrations",
+  },
+  run({ payload, context }) {
+    console.log("Running DB migration task...");
     return "Success";
   },
 });
@@ -58,7 +61,7 @@ export default defineNitroTask({
 
 ## Run tasks
 
-To execute tasks, you can use `runNitroTask(name, <payload>)` utility.
+To execute tasks, you can use `runTask(name, { payload? })` utility.
 
 **Example:**
 
@@ -67,14 +70,14 @@ To execute tasks, you can use `runNitroTask(name, <payload>)` utility.
 export default eventHandler(async (event) => {
   // IMPORTANT: Authenticate user and validate payload!
   const payload = { ...getQuery(event) };
-  const { result } = await runNitroTask("db:migrate", payload);
+  const { result } = await runTask("db:migrate", { payload });
   return { result };
 });
 ```
 
 ## Run tasks with dev server
 
-Nitro's built-in dev server exposes tasks to be easily executed without programmatic .usage.
+Nitro's built-in dev server exposes tasks to be easily executed without programmatic usage.
 
 ### Using API routes
 
@@ -82,9 +85,8 @@ Nitro's built-in dev server exposes tasks to be easily executed without programm
 
 This endpoint returns a list of available task names and their meta.
 
-**Example:**
-
 ```json
+// [GET] /_nitro/tasks
 {
   "tasks": {
     "db:migrate": {
@@ -98,9 +100,8 @@ This endpoint returns a list of available task names and their meta.
 
 This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload.
 
-**Example:** (`/_nitro/tasks/db:migrate`)
-
 ```json
+// [GET] /_nitro/tasks/db:migrate
 {
   "result": "Database migrations completed!"
 }
@@ -114,11 +115,11 @@ This endpoint executes a task. You can provide a payload using both query parame
 #### List tasks
 
 ```sh
-nitro tasks list
+nitro task list
 ```
 
 #### Run a task
 
 ```sh
-nitro tasks run db:migrate --payload "{}"
+nitro task run db:migrate --payload "{}"
 ```
