fix(tasks): run only once at the same time

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -75,6 +75,13 @@ export default eventHandler(async (event) => {
 });
 ```
 
+## Concurrency
+
+> [!NOTE]
+> Nitro tasks can be running multiple times and in parralel.
+
+Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results to calling it once and all calers will get same return value.
+
 ## Run tasks with dev server
 
 Nitro's built-in dev server exposes tasks to be easily executed without programmatic usage.
