feat: experimental scheduled tasks

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -75,6 +75,39 @@ export default eventHandler(async (event) => {
 });
 ```
 
+## Scheduled tasks
+
+You can define scheduled tasks using Nitro configuration to automatically run after each period of time.
+
+> [!NOTE]
+> Nitro uses [croner](https://croner.56k.guru/) as the runner engine in server presets.
+
+> [!TIP]
+> You can use [crontab.guru](https://crontab.guru/) to easily generate and understand cron tab patterns.
+
+::code-group
+```ts [nitro.config.ts]
+export default defineNitroConfig({
+  tasks: {
+    // Run `cms:update` task every minute
+    '* * * * *': ['cms:update']
+  }
+})
+```
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  nitro: {
+    tasks: {
+      // Run `cms:update` task every minute
+      '* * * * *': ['cms:update']
+    }
+  }
+})
+```
+::
+
+
 ## Concurrency
 
 > [!NOTE]
@@ -98,7 +131,15 @@ This endpoint returns a list of available task names and their meta.
   "tasks": {
     "db:migrate": {
       "description": "Run database migrations"
+    },
+     "cms:update": {
+      "description": "Update CMS content"
     }
+  },
+  "scheduledTasks": {
+    "* * * * *": [
+      "cms:update"
+    ]
   }
 }
 ```
