--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -80,7 +80,7 @@ export default eventHandler(async (event) => {
 You can define scheduled tasks using Nitro configuration to automatically run after each period of time.
 
 > [!NOTE]
-> Nitro uses [croner](https://croner.56k.guru/) as the runner engine in server presets.
+> Currently `dev`, `node-server`, `bun` and `deno-server` presets are supported with [croner](https://croner.56k.guru/) engine.
 
 > [!TIP]
 > You can use [crontab.guru](https://crontab.guru/) to easily generate and understand cron tab patterns.
