--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -59,31 +59,10 @@ export default defineTask({
 > [!NOTE]
 > Use `server/tasks/db/migrate.ts` for Nuxt.
 
-## Run tasks
-
-To execute tasks, you can use `runTask(name, { payload? })` utility.
-
-**Example:**
-
-```ts
-// api/migrate.ts
-export default eventHandler(async (event) => {
-  // IMPORTANT: Authenticate user and validate payload!
-  const payload = { ...getQuery(event) };
-  const { result } = await runTask("db:migrate", { payload });
-  return { result };
-});
-```
 
 ## Scheduled tasks
 
 You can define scheduled tasks using Nitro configuration to automatically run after each period of time.
-
-> [!NOTE]
-> Currently `dev`, `node-server`, `bun` and `deno-server` presets are supported with [croner](https://croner.56k.guru/) engine.
-
-> [!TIP]
-> You can use [crontab.guru](https://crontab.guru/) to easily generate and understand cron tab patterns.
 
 ::code-group
 ```ts [nitro.config.ts]
@@ -105,15 +84,33 @@ export default defineNuxtConfig({
   }
 })
 ```
+
 ::
 
+> [!TIP]
+> You can use [crontab.guru](https://crontab.guru/) to easily generate and understand cron tab patterns.
 
-## Concurrency
+### Platform support
 
-> [!NOTE]
-> Nitro tasks can be running multiple times and in parralel.
+- `dev`, `node-server`, `bun` and `deno-server` presets are supported with [croner](https://croner.56k.guru/) engine.
+- `cloudflare_module` and `cloudflare_pages` preset have native integraton with [Cron Triggers](https://developers.cloudflare.com/workers/configuration/cron-triggers/). Make sure to configure wrangler to use exactly same patterns you define in `scheduledTasks` to be matched.
+- More presets (with native primitives support) are planned to be supported!
 
-Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results to calling it once and all calers will get same return value.
+## Programmatically run tasks
+
+To manually run tasks, you can use `runTask(name, { payload? })` utility.
+
+**Example:**
+
+```ts
+// api/migrate.ts
+export default eventHandler(async (event) => {
+  // IMPORTANT: Authenticate user and validate payload!
+  const payload = { ...getQuery(event) };
+  const { result } = await runTask("db:migrate", { payload });
+  return { result };
+});
+```
 
 ## Run tasks with dev server
 
@@ -171,3 +168,12 @@ nitro task list
 ```sh
 nitro task run db:migrate --payload "{}"
 ```
+
+## Notes
+
+### Concurrency
+
+Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results to calling it once and all callers will get the same return value.
+
+> [!NOTE]
+> Nitro tasks can be running multiple times and in parralel.
