feat: experimental scheduled tasks (#2179)

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -59,9 +59,46 @@ export default defineTask({
 > [!NOTE]
 > Use `server/tasks/db/migrate.ts` for Nuxt.
 
-## Run tasks
 
-To execute tasks, you can use `runTask(name, { payload? })` utility.
+## Scheduled tasks
+
+You can define scheduled tasks using Nitro configuration to automatically run after each period of time.
+
+::code-group
+```ts [nitro.config.ts]
+export default defineNitroConfig({
+  tasks: {
+    // Run `cms:update` task every minute
+    '* * * * *': ['cms:update']
+  }
+})
+```
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  nitro: {
+    tasks: {
+      // Run `cms:update` task every minute
+      '* * * * *': ['cms:update']
+    }
+  }
+})
+```
+
+::
+
+> [!TIP]
+> You can use [crontab.guru](https://crontab.guru/) to easily generate and understand cron tab patterns.
+
+### Platform support
+
+- `dev`, `node-server`, `bun` and `deno-server` presets are supported with [croner](https://croner.56k.guru/) engine.
+- `cloudflare_module` and `cloudflare_pages` preset have native integraton with [Cron Triggers](https://developers.cloudflare.com/workers/configuration/cron-triggers/). Make sure to configure wrangler to use exactly same patterns you define in `scheduledTasks` to be matched.
+- More presets (with native primitives support) are planned to be supported!
+
+## Programmatically run tasks
+
+To manually run tasks, you can use `runTask(name, { payload? })` utility.
 
 **Example:**
 
@@ -91,7 +128,15 @@ This endpoint returns a list of available task names and their meta.
   "tasks": {
     "db:migrate": {
       "description": "Run database migrations"
+    },
+     "cms:update": {
+      "description": "Update CMS content"
     }
+  },
+  "scheduledTasks": {
+    "* * * * *": [
+      "cms:update"
+    ]
   }
 }
 ```
@@ -123,3 +168,12 @@ nitro task list
 ```sh
 nitro task run db:migrate --payload "{}"
 ```
+
+## Notes
+
+### Concurrency
+
+Each task can have **one running instance**. Calling a task of same name multiple times in parallel, results to calling it once and all callers will get the same return value.
+
+> [!NOTE]
+> Nitro tasks can be running multiple times and in parralel.
