--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -67,7 +67,7 @@ You can define scheduled tasks using Nitro configuration to automatically run af
 ::code-group
 ```ts [nitro.config.ts]
 export default defineNitroConfig({
-  tasks: {
+  scheduledTasks: {
     // Run `cms:update` task every minute
     '* * * * *': ['cms:update']
   }
@@ -77,7 +77,7 @@ export default defineNitroConfig({
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   nitro: {
-    tasks: {
+    scheduledTasks: {
       // Run `cms:update` task every minute
       '* * * * *': ['cms:update']
     }
