--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -152,7 +152,7 @@ This endpoint executes a task. You can provide a payload using both query parame
 }
 ```
 
-### Usin CLI
+### Using CLI
 
 > [!IMPORTANT]
 > It is only possible to run these commands while the **dev server is running**. You should run them in a second terminal.
