docs: fix link to H3 utils

--- a/docs/1.guide/1.utils.md
+++ b/docs/1.guide/1.utils.md
@@ -13,7 +13,7 @@ It is because Nitro uses [unjs/unimport](https://github.com/unjs/unimport) to au
 
 ## H3 utils
 
-Nitro enables all [h3 utils](https://h3.unjs.io/utilso) as auto imports so you can use `defineEventHandler`, `readBody`, etc without manually importing them.
+Nitro enables all [h3 utils](https://h3.unjs.io/utils) as auto imports so you can use `defineEventHandler`, `readBody`, etc without manually importing them.
 
 ::read-more{title="H3 Docs" to="https://h3.unjs.io/utils"}
 ::
@@ -62,7 +62,7 @@ Check [the source code](https://github.com/unjs/nitro/blob/main/src/imports.ts) 
 ::
 
 ::read-more{to="/guide/typescript"}
-The types are auto generated for global auto-imports when running the `prepare` or `dev` command. See [typeScript](/guide/typescript) guide, for IDE support.
+The types are auto generated for global auto-imports when running the `prepare` or `dev` command. See [TypeScript](/guide/typescript) guide, for IDE support.
 ::
 
 ## Manual imports
