feat(routeRules): allow wildcard redirects (#1976)

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -316,6 +316,7 @@ routeRules: {
   '/api/v1/**': { cors: true, headers: { 'access-control-allow-methods': 'GET' } },
   '/old-page': { redirect: '/new-page' }, // uses status code 307 (Temporary Redirect)
   '/old-page2': { redirect: { to:'/new-page2', statusCode: 301 } },
+  '/old-page/**': { redirect: '/new-page/**' },
   '/proxy/example': { proxy: 'https://example.com' },
   '/proxy/**': { proxy: '/api/**' },
 }
