--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -243,6 +243,7 @@ export default defineNitroConfig({
     '/assets/**': { headers: { 'cache-control': 's-maxage=0' } },
     '/api/v1/**': { cors: true, headers: { 'access-control-allow-methods': 'GET' } },
     '/old-page': { redirect: '/new-page' },
+    '/old-page/**': { redirect: '/new-page/**' },
     '/proxy/example': { proxy: 'https://example.com' },
     '/proxy/**': { proxy: '/api/**' },
   }
@@ -258,6 +259,7 @@ export default defineNuxtConfig({
     '/assets/**': { headers: { 'cache-control': 's-maxage=0' } },
     '/api/v1/**': { cors: true, headers: { 'access-control-allow-methods': 'GET' } },
     '/old-page': { redirect: '/new-page' },
+    '/old-page/**': { redirect: '/new-page/**' },
     '/proxy/example': { proxy: 'https://example.com' },
     '/proxy/**': { proxy: '/api/**' },
   }
