docs: fix db config

--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -85,12 +85,12 @@ You can configure database connections using `database` config:
 export default defineNitroConfig({
   database: {
     default: {
-      driver: 'sqlite3',
-      options: { name: "db" }
+      connector: 'sqlite3',
+      options: { name: 'db' }
     },
     users: {
-      driver: 'postgresql',
-      url: "postgresql://username:password@hostname:port/database_name"
+      connector: 'postgresql',
+      url: 'postgresql://username:password@hostname:port/database_name'
     }
   }
 })
@@ -100,12 +100,12 @@ export default defineNuxtConfig({
   nitro: {
     database: {
       default: {
-        driver: 'sqlite3',
-        options: { name: "db" }
+        connector: 'sqlite',
+        options: { name: 'db' }
       },
       users: {
-        driver: 'postgresql',
-        url: "postgresql://username:password@hostname:port/database_name"
+        connector: 'postgresql',
+        url: 'postgresql://username:password@hostname:port/database_name'
       }
     }
   }
