docs: fix db config

--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -85,7 +85,7 @@ You can configure database connections using `database` config:
 export default defineNitroConfig({
   database: {
     default: {
-      connector: 'sqlite3',
+      connector: 'sqlite',
       options: { name: 'db' }
     },
     users: {
