docs: add websocket chat demo to websocket api page

--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -95,6 +95,9 @@ export default defineEventHandler(() => {
 
 Now you can try it on `/websocket` route!
 
+> [!TIP]
+> Check out our [chat demo](https://nuxt-chat.pi0.io/) using Nitro Websocket API.
+
 ## Server Sent Events (SSE)
 
 As an alternative to WebSockets, you can use [Server-sent events](https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events)
