--- a/docs/1.guide/5.database.md
+++ b/docs/1.guide/5.database.md
@@ -9,7 +9,7 @@ icon: ri:database-2-line
 The default database connection is **preconfigured** with [SQLite](https://db0.unjs.io/connectors/sqlite) and works out of the box for development mode and any Node.js compatible production deployments. By default, data will be stored in `.data/db.sqlite3`.
 
 > [!TIP]
-> You can change default connection or define more connctions to any of the [supported databases](https://db0.unjs.io/connectors/sqlite).
+> You can change default connection or define more connections to any of the [supported databases](https://db0.unjs.io/connectors/sqlite).
 
 > [!TIP]
 > You can integrate database instance to any of the [supported ORMs](https://db0.unjs.io/integrations).
