fix: spelling typo

--- a/docs/2.deploy/0.index.md
+++ b/docs/2.deploy/0.index.md
@@ -29,7 +29,7 @@ When deploying to production using CI/CD, Nitro tries to automatically detect th
 
 ## Changing the deployment preset
 
-If you need to build Nitro against a specific provider, you can target it wby defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration) or using `--preset` argument.
+If you need to build Nitro against a specific provider, you can target it by defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration) or using `--preset` argument.
 
 Using the environment variable approach is recommended for deployments depending on CI/CD.
 
