--- a/docs/1.guide/7.fetch.md
+++ b/docs/1.guide/7.fetch.md
@@ -8,7 +8,7 @@ icon: ri:global-line
 
 ## Usage
 
-In you handler, you've just to call the `$fetch` function to make a request. The response will be automatically parsed.
+In your handler, you've just to call the `$fetch` function to make a request. The response will be automatically parsed.
 
 ```ts [Router Handler]
 export default defineEventHandler(async (event) => {
