Update payload usage for tasks with nitro dev server

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -143,14 +143,44 @@ This endpoint returns a list of available task names and their meta.
 
 #### `/_nitro/tasks/:name`
 
-This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload.
+This endpoint executes a task. You can provide a payload using both query parameters and body JSON payload. The payload sent in the JSON body payload must be under the `"payload"` property.
+
+```ts [tasks/echo/payload.ts]
+export default defineTask({
+  meta: {
+    name: "echo:payload",
+    description: "Returns the provided payload",
+  },
+  run({ payload, context }) {
+    console.log("Running echo task...");
+    return payload;
+  },
+});
+```
 
 ```json
-// [GET] /_nitro/tasks/db:migrate
+// [GET] /_nitro/tasks/echo:payload?field1=value1
 {
-  "result": "Database migrations completed!"
+  "field1": "value1"
+}
+
+```json
+/**
+ * [POST] /_nitro/tasks/echo:payload?field1=value1
+ * body: {
+ *   "payload": {
+ *     "answer": 42
+ *   }
+ * }
+ */
+{
+  "field1": "value1",
+  "answer": 42
 }
 ```
+
+> [!NOTE]
+> The JSON payload included in the body will overwrite the keys present in the query params.
 
 ### Using CLI
 
