docs: update with more usecases

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -159,23 +159,30 @@ export default defineTask({
 ```
 
 ```json
-// [GET] /_nitro/tasks/echo:payload?field1=value1
+// [GET] /_nitro/tasks/echo:payload?field=value&array=1&array=2
 {
-  "field1": "value1"
+  "field": "value",
+  "array": ["1", "2"]
 }
 
 ```json
 /**
- * [POST] /_nitro/tasks/echo:payload?field1=value1
+ * [POST] /_nitro/tasks/echo:payload?field=value
  * body: {
  *   "payload": {
- *     "answer": 42
+ *     "answer": 42,
+ *     "nested": {
+ *       "value": true
+ *     }
  *   }
  * }
  */
 {
-  "field1": "value1",
-  "answer": 42
+  "field": "value",
+  "answer": 42,
+  "nested": {
+    "value": true
+  }
 }
 ```
 
