docs: fix payload for scheduled tasks

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -133,11 +133,14 @@ This endpoint returns a list of available task names and their meta.
       "description": "Update CMS content"
     }
   },
-  "scheduledTasks": {
-    "* * * * *": [
-      "cms:update"
-    ]
-  }
+  "scheduledTasks": [
+    {
+      "cron": "* * * * *",
+      "tasks": [
+        "cms:update"
+      ]
+    }
+  ]
 }
 ```
 
