docs: fix server assets example path

--- a/docs/1.guide/8.assets.md
+++ b/docs/1.guide/8.assets.md
@@ -55,7 +55,7 @@ All assets in `assets/` directory will be added to the server bundle. After buil
 
 They can be addressed by the `assets:server` mount point using the [storage layer](/guide/storage).
 
-For example, you could store a json file in `assets/server/data.json` and retrieve it in your handler:
+For example, you could store a json file in `assets/data.json` and retrieve it in your handler:
 
 ```js
 export default defineEventHandler(async () => {
