docs(config): add scalar route to the config documentation

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -40,7 +40,7 @@ Enable experimental features.
 
 #### `openAPI`
 
-Enable `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
+Enable `/_nitro/scalar` and `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
 #### `wasm`
 
