chore: fix typo

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -10,7 +10,7 @@ icon: codicon:run-all
 
 > [!IMPORTANT]
 > Tasks support is currently experimental and available in [nightly channel](/guide/nightly).
-> See [unjs/nitro#1974](https://github.com/unjs/nitro/issues/1974) for the relavant discussion.
+> See [unjs/nitro#1974](https://github.com/unjs/nitro/issues/1974) for the relevant discussion.
 
 In order to tasks API you need to enable experimental feature flag.
 
