docs: fix wording

--- a/docs/1.guide/3.websocket.md
+++ b/docs/1.guide/3.websocket.md
@@ -18,7 +18,7 @@ Nitro natively supports runtime agnostic [WebSocket](https://developer.mozilla.o
 > WebSockets support is currently experimental and available in [nightly channel](/guide/nightly).
 > See [unjs/nitro#2171](https://github.com/unjs/nitro/issues/2171) for platform support status.
 
-In order to enable database layer you need to enable experimental feature flag.
+In order to enable websocket support you need to enable the experimental `websocket` feature flag.
 
 ::code-group
 ```ts [nitro.config.ts]
