docs: remove nightly notice

--- a/docs/1.guide/10.tasks.md
+++ b/docs/1.guide/10.tasks.md
@@ -9,7 +9,7 @@ icon: codicon:run-all
 ## Opt-in to the experimental feature
 
 > [!IMPORTANT]
-> Tasks support is currently experimental and available in [nightly channel](/guide/nightly).
+> Tasks support is currently experimental.
 > See [unjs/nitro#1974](https://github.com/unjs/nitro/issues/1974) for the relevant discussion.
 
 In order to tasks API you need to enable experimental feature flag.
